[gd_scene load_steps=3 format=3 uid="uid://c24he72l3baoa"]

[ext_resource type="Script" path="res://addons/nt_goap/nt_goap_action_library.gd" id="1_2nwik"]
[ext_resource type="PackedScene" uid="uid://bjcnxuvrtlia" path="res://addons/nt_goap/nt_goap_action_view.tscn" id="1_xw6od"]

[node name="NT_GOAP_Action_Library" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_2nwik")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "行动库"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionView" parent="PanelContainer/VBoxContainer" instance=ExtResource("1_xw6od")]
unique_name_in_owner = true
layout_mode = 2

[node name="Load" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "导入"

[node name="Export" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "导出"

[connection signal="remove_action" from="PanelContainer/VBoxContainer/ActionView" to="." method="_on_action_view_remove_action"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Export" to="." method="_on_export_pressed"]
